Adding cover functionality

--- a/Playlist Maker.ipynb
+++ b/Playlist Maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,12 @@
     "\n",
     "REDIRECT_URI = \"https://google.com/\"\n",
     "scope = \"playlist-modify-public ugc-image-upload\"\n",
-    "IMG_PATH = \"green.jpg\""
+    "IMG_PATH = \"cover_photos/green.jpg\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "    \"\"\"\n",
     "    Returns the corresponding spotify URI from a given song title\n",
     "    \"\"\"\n",
-    "    search_results = sp.search(q=song + \"%20\", type='track', limit=1)\n",
+    "    search_results = sp.search(q=str(song + \"%20\"), type='track', limit=1)\n",
     "    try:\n",
     "        return search_results['tracks']['items'][0]['id']\n",
     "    except (AttributeError, IndexError) as err:\n",
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,26 +117,25 @@
     "            description=\"This playlist was automatically generated based on user input using the Spotify Web API. See the code on GitHub! @willfurtado\")\n",
     "    \n",
     "    playlist_id = getNewPlaylistURI()\n",
+    "    uploadPlaylistCover(playlist_id)\n",
     "    tracks_list = list(tracks.values())\n",
     "    sp.user_playlist_add_tracks(getCurrentUser(), \n",
     "                                playlist_id, \n",
     "                                tracks_list)\n",
-    "    print(\"Uploading cover...\")\n",
-    "    uploadPlaylistCover(playlist_id)\n",
+    "\n",
     "    return \"Playlist created successfully!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello this is the last test for tonight\n",
-      "Uploading cover...\n"
+      "There is only one friend\n"
      ]
     },
     {
@@ -145,7 +144,7 @@
        "'Playlist created successfully!'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,6 +152,13 @@
    "source": [
     "playlistGenerator()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
