Converting to Python script

--- a/Playlist Maker.ipynb
+++ b/Playlist Maker.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy\n",
     "import json\n",
     "import base64\n",
+    "import tkinter as tk\n",
     "from secrets import CLIENT_ID, CLIENT_SECRET, REDIRECT_URI\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,14 +129,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Application(tk.Frame):\n",
+    "    def __init__(self, master=None):\n",
+    "        super().__init__(master)\n",
+    "        self.master = master\n",
+    "        self.pack()\n",
+    "        self.create_widgets()\n",
+    "\n",
+    "    def create_widgets(self):\n",
+    "        self.hi_there = tk.Button(self)\n",
+    "        self.hi_there[\"text\"] = \"Hello World\\n(click me)\"\n",
+    "        self.hi_there[\"command\"] = self.say_hi\n",
+    "        self.hi_there.pack(side=\"top\")\n",
+    "\n",
+    "        self.quit = tk.Button(self, text=\"QUIT\", fg=\"red\",\n",
+    "                              command=self.master.destroy)\n",
+    "        self.quit.pack(side=\"bottom\")\n",
+    "\n",
+    "    def say_hi(self):\n",
+    "        print(\"hi there, everyone!\")\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "app = Application(master=root)\n",
+    "app.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is only one friend\n"
+      "There Can Only Be One\n"
      ]
     },
     {
@@ -144,7 +176,7 @@
        "'Playlist created successfully!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,13 +184,6 @@
    "source": [
     "playlistGenerator()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
