Web Application deployment with Flask

--- a/Playlist Maker.ipynb
+++ b/Playlist Maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,15 @@
     "    \"\"\"\n",
     "    Returns the corresponding spotify URI from a given song title\n",
     "    \"\"\"\n",
-    "    search_results = sp.search(q=str(song + \"%20\"), type='track', limit=1)\n",
     "    try:\n",
-    "        return search_results['tracks']['items'][0]['id']\n",
+    "        results = sp.search(q=song, type=\"track\", limit=50)['tracks']['items']\n",
+    "        names, ids = [results[i]['name'] for i in range(50)], [results[i]['id'] for i in range(50)]\n",
+    "        zipped, zipped2 = zip(names, ids), zip(names, ids)\n",
+    "        perfect_match = [track_id for (name, track_id) in zipped2 if name.lower() == song.lower()]\n",
+    "        track_uri = [track_id for (name, track_id) in zipped if name.lower().startswith(song.lower() + \" \")][0]\n",
+    "        return track_uri if not perfect_match else perfect_match[0]\n",
     "    except (AttributeError, IndexError) as err:\n",
-    "        print('No results for {}'.format(song))\n",
+    "        return err\n",
     "    \n",
     "def getCurrentUser():\n",
     "    \"\"\"\n",
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +82,7 @@
     "    \"\"\"\n",
     "    tracks = {}\n",
     "    sentence_string = input(\"\")\n",
-    "    words = sentence_string.lower().split()\n",
+    "    words = sentence_string.split()\n",
     "    for word in words:\n",
     "        track_id = get_spotify_uri(word)\n",
     "        if word not in tracks:\n",
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,45 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Application(tk.Frame):\n",
-    "    def __init__(self, master=None):\n",
-    "        super().__init__(master)\n",
-    "        self.master = master\n",
-    "        self.pack()\n",
-    "        self.create_widgets()\n",
-    "\n",
-    "    def create_widgets(self):\n",
-    "        self.hi_there = tk.Button(self)\n",
-    "        self.hi_there[\"text\"] = \"Hello World\\n(click me)\"\n",
-    "        self.hi_there[\"command\"] = self.say_hi\n",
-    "        self.hi_there.pack(side=\"top\")\n",
-    "\n",
-    "        self.quit = tk.Button(self, text=\"QUIT\", fg=\"red\",\n",
-    "                              command=self.master.destroy)\n",
-    "        self.quit.pack(side=\"bottom\")\n",
-    "\n",
-    "    def say_hi(self):\n",
-    "        print(\"hi there, everyone!\")\n",
-    "\n",
-    "root = tk.Tk()\n",
-    "app = Application(master=root)\n",
-    "app.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There Can Only Be One\n"
+      "Kyle Loves Me\n"
      ]
     },
     {
@@ -176,7 +149,7 @@
        "'Playlist created successfully!'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,6 +157,13 @@
    "source": [
     "playlistGenerator()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
