Adding external link to success page

--- a/Playlist Maker.ipynb
+++ b/Playlist Maker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,26 @@
     "    client_secret=CLIENT_SECRET,\n",
     "    cache_path='../.cache-willfurtado',\n",
     "    redirect_uri=REDIRECT_URI))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://open.spotify.com/playlist/10vAhNXEtSqjxgMc7khU3W'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.playlist(\"spotify:playlist:10vAhNXEtSqjxgMc7khU3W\")['external_urls']['spotify']"
    ]
   },
   {
