Switching to spaCy for sentence parsing

--- a/Playlist Maker.ipynb
+++ b/Playlist Maker.ipynb
@@ -2,25 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy\n",
     "import json\n",
     "import base64\n",
-    "import tkinter as tk\n",
     "from secrets import CLIENT_ID, CLIENT_SECRET, REDIRECT_URI\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
+    "import spacy\n",
+    "\n",
+    "from spacy.lang.en import English\n",
     "\n",
     "REDIRECT_URI = \"https://google.com/\"\n",
     "scope = \"playlist-modify-public ugc-image-upload\"\n",
-    "IMG_PATH = \"cover_photos/green.jpg\""
+    "IMG_PATH = \"cover_photos/green.jpg\"\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp = English()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,27 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://open.spotify.com/playlist/10vAhNXEtSqjxgMc7khU3W'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sp.playlist(\"spotify:playlist:10vAhNXEtSqjxgMc7khU3W\")['external_urls']['spotify']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +86,17 @@
     "    \"\"\"\n",
     "    tracks = {}\n",
     "    sentence_string = input(\"\")\n",
-    "    words = sentence_string.split()\n",
-    "    for word in words:\n",
-    "        track_id = get_spotify_uri(word)\n",
-    "        if word not in tracks:\n",
-    "            tracks[word] = track_id\n",
+    "    tokens = nlp(sentence_string)\n",
+    "    for token in tokens:\n",
+    "        track_id = get_spotify_uri(token.text)\n",
+    "        if token.text not in tracks:\n",
+    "            tracks[token.text] = track_id\n",
     "    return tracks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +126,7 @@
     "            description=\"This playlist was automatically generated based on user input using the Spotify Web API. See the code on GitHub! @willfurtado\")\n",
     "    \n",
     "    playlist_id = getNewPlaylistURI()\n",
-    "    uploadPlaylistCover(playlist_id)\n",
+    "    #uploadPlaylistCover(playlist_id)\n",
     "    tracks_list = list(tracks.values())\n",
     "    sp.user_playlist_add_tracks(getCurrentUser(), \n",
     "                                playlist_id, \n",
@@ -153,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kyle Loves Me\n"
+      "will likes cool technology\n"
      ]
     },
     {
@@ -169,7 +153,7 @@
        "'Playlist created successfully!'"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,13 +161,6 @@
    "source": [
     "playlistGenerator()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
